--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zahin.mochahub.io",
-  "homepage": "http://zahin-mohammad.github.io",
+  "homepage": "https://zahin-mohammad.github.io/zahin.mochahub.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
