--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-github-calendar": "^1.0.4",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "gh-pages": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
