--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-dark-theme": "^1.1.1",
     "react-dom": "^16.12.0",
     "react-github-calendar": "^1.0.4",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "react-tooltip": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
