--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dark-theme": "^1.1.1",
     "react-dom": "^16.12.0",
     "react-github-calendar": "^1.0.4",
+    "react-github-corner": "^2.3.0",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
