--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: build
-          path: build
+          name: build-prod
+          path: build-prod
   deploy:
     name: Deploy
     needs: build
@@ -31,8 +31,8 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
-          name: dist
-          path: dist
+          name: build-prod
+          path: build-prod
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
