--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dark-theme": "^1.1.1",
     "react-dom": "^16.12.0",
+    "react-event-timeline": "^1.6.3",
     "react-github-calendar": "^1.0.4",
     "react-github-corner": "^2.3.0",
     "react-markdown": "^4.3.1",
