--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axetroy/react-github-calendar": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
@@ -23,7 +24,7 @@
     "react-dark-theme": "^1.1.1",
     "react-dom": "^16.12.0",
     "react-event-timeline": "^1.6.3",
-    "react-github-calendar": "^1.0.4",
+    "react-github-calendar": "^2.0.2",
     "react-github-corner": "^2.3.0",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
