--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
     "glamorous": "^5.0.0",
+    "prettier": "^2.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dark-theme": "^1.1.1",
