--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-github-calendar": "^2.0.2",
     "react-github-corner": "^2.3.0",
     "react-markdown": "^4.3.1",
+    "react-rough-notation": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-tooltip": "^4.2.6"
